RESOLVED FIXED133092
REGRESSION: Standalone images need to take topContentInset into account
https://bugs.webkit.org/show_bug.cgi?id=133092
Summary REGRESSION: Standalone images need to take topContentInset into account
Beth Dakin
Reported 2014-05-19 16:26:50 PDT
Standalone images taller than the viewport are scaled to a size slightly taller than the viewport when there is a topContentInset. <rdar://problem/16945791>
Attachments
Patch (2.77 KB, patch)
2014-05-19 16:36 PDT, Beth Dakin
darin: review+
Beth Dakin
Comment 1 2014-05-19 16:36:13 PDT
Benjamin Poulain
Comment 2 2014-05-19 16:46:32 PDT
Comment on attachment 231735 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=231735&action=review > Source/WebCore/html/ImageDocument.cpp:283 > + IntSize viewportSize = view->visibleSize(); Doesn't this also account for the scale factor?
Beth Dakin
Comment 3 2014-05-19 16:53:36 PDT
(In reply to comment #2) > (From update of attachment 231735 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=231735&action=review > > > Source/WebCore/html/ImageDocument.cpp:283 > > + IntSize viewportSize = view->visibleSize(); > > Doesn't this also account for the scale factor? I don't see any differences introduced by this change based on scale factor.
Beth Dakin
Comment 4 2014-05-19 16:55:52 PDT
(In reply to comment #2) > (From update of attachment 231735 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=231735&action=review > > > Source/WebCore/html/ImageDocument.cpp:283 > > + IntSize viewportSize = view->visibleSize(); > > Doesn't this also account for the scale factor? Oh, and to more directly answer the question, it does not take scale factor into account. It ends up calling unscaledUnobscuredVisibleContentSize().
Beth Dakin
Comment 5 2014-05-19 16:58:23 PDT
Note You need to log in before you can comment on or make changes to this bug.